<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_link1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv1_text"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:background="#E06F9846"
        />

    <TextView
        android:id="@+id/tv_link1_2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/tv2_text"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:background="#8B7C6036"
        />

    <TextView
        android:id="@+id/tv_link1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv3_text"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:background="#E02AA1B3"
        />

    <Button
        android:id="@+id/btn_link1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="跳转link2"/>

</LinearLayout>